feat(permission): add role for account
